<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ApplicationInfo">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="#ffffff"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/styleToolBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/info"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="center"
                android:paddingTop="22dp"/>

            <TextView
                android:id="@+id/number_one_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/number_one"
                tools:layout_editor_absoluteX="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/number_two_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/number_two"
                app:layout_constraintTop_toBottomOf="@+id/number_one_text_view"
                tools:layout_editor_absoluteX="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/number_three_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/number_three"
                app:layout_constraintTop_toBottomOf="@+id/number_two_text_view"
                tools:layout_editor_absoluteX="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:id="@+id/link_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/my_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_three_text_view"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/link_text_view"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/adres_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/adres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_view"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>