<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="24sp"
            android:layout_marginTop="26dp"
            android:text="@string/radio_name"/>

        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/location_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/number_fm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:text="@string/fm"/>

        <TextView
            android:id="@+id/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#676767"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:text="@string/license"/>

        <TextView
            android:id="@+id/live_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_two"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textColor="#9da3ad"
            android:textSize="14sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="8362) 63-00-88"
            android:layout_marginTop="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            style="@style/MyButtonStyleGray"
            android:textColor="#676767"
            android:background="@drawable/button_main"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Редакция\n(8362) 42-69-26"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/email_icon"
            android:contentDescription="@null"
            android:layout_gravity="center"
            android:layout_marginTop="33dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="#1D2D3D"
            android:paddingTop="2dp"
            android:textStyle="bold"
            android:text="fm@puls-radio.ru"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/location_icon"
            android:contentDescription="@null"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="#1D2D3D"
            android:paddingTop="2dp"
            android:textStyle="bold"
            android:text="Республика Марий Эл г. Йошкар-Ола,\n Бульвар победы 15а"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#5498FF"
            android:paddingTop="32dp"
            android:textStyle="bold"
            android:text="www.puls-radio.ru"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>